package com.juandelacierva.ChurnGym.domain;

public enum EstadoImportacion 
{
    PROCESANDO,
    COMPLETADA,
    ERROR
}
