package com.juandelacierva.ChurnGym.domain;

public enum NivelRiesgo 
{
    BAJO, 
    MEDIO,
    ALTO
}
