@startuml diagrama_entidades_churn_gym

skinparam linetype ortho
skinparam classFontSize 12
skinparam classFontName Arial
skinparam classBackgroundColor #E6F1FB
skinparam classBorderColor #185FA5
skinparam classHeaderBackgroundColor #1F4E79
skinparam classHeaderFontColor #FFFFFF
skinparam arrowColor #595959
skinparam arrowFontSize 10
skinparam arrowFontColor #595959
skinparam packageBackgroundColor #F2F2F2
skinparam packageBorderColor #CCCCCC

' ── ENUMERACIONES ──────────────────────────────────────────────────────────────

enum NivelRiesgo <<enumeration>> {
  BAJO
  MEDIO
  ALTO
}

enum Rol <<enumeration>> {
  ADMIN
  USUARIO
}

enum EstadoImportacion <<enumeration>> {
  PROCESANDO
  COMPLETADA
  ERROR
}

' ── ENTIDADES ──────────────────────────────────────────────────────────────────

class Usuario {
  - Long id
  - String username
  - String email
  - String passwordHash
  - Rol rol
  - Boolean activo
  - LocalDateTime creadoEn
}

class Cliente {
  - Long id
  - String nombre
  - String apellidos
  - String email
  - LocalDate fechaNacimiento
  - LocalDate fechaAlta
  - Boolean activo
}

class ImportacionCsv {
  - Long id
  - Long usuarioId
  - String nombreDescriptivo
  - String nombreFichero
  - LocalDateTime fechaImportacion
  - Integer totalRegistros
  - Integer registrosOk
  - Integer registrosError
  - EstadoImportacion estado
}

class Visita {
  - Long id
  - Long clienteId
  - Long importacionId
  - LocalDate fechaVisita
  - Integer duracionMinutos
}

class MetricaCliente {
  - Long id
  - Long clienteId
  - Long importacionId
  - Double frecuenciaSemanal
  - Integer semanasInactivo
  - Double tendenciaMensual
  - NivelRiesgo nivelRiesgo
  - LocalDateTime calculadaEn
}

' ── RELACIONES ─────────────────────────────────────────────────────────────────

' Un usuario realiza cero o muchas importaciones
Usuario "1" o-- "0..*" ImportacionCsv : realiza

' Una importacion contiene una o muchas visitas (required)
ImportacionCsv "1" *-- "1..*" Visita : contiene

' Una importacion genera una o muchas metricas (una por cliente unico del CSV)
ImportacionCsv "1" *-- "1..*" MetricaCliente : genera

' Un cliente tiene cero o muchas visitas en total (de distintas importaciones)
Cliente "1" o-- "0..*" Visita : registra

' Un cliente acumula cero o muchas metricas a lo largo del tiempo
Cliente "1" o-- "0..*" MetricaCliente : acumula

' ── ENUMS VINCULADOS ───────────────────────────────────────────────────────────

Usuario --> Rol
ImportacionCsv --> EstadoImportacion
MetricaCliente --> NivelRiesgo

@enduml
